Resolved issue http://teamopenuss.uni-muenster.de/jira/browse/USS-910 - Increased width of col_date by 10px to avoid a wrap within the date string - Implemented f:convertDateTime in discussiontable and thread view
git-svn-id: https://svn.code.sf.net/p/openuss/code/branches/openuss-plexus-3.1@4560 60046477-0c10-0410-bf4b-e552a4ff1768

--- a/themes/theme-plexus/src/main/webapp/css/style.css
+++ b/themes/theme-plexus/src/main/webapp/css/style.css
@@ -1785,7 +1785,7 @@ td.col_min_left {
 }
 
 td.col_date {
-	width: 100px;
+	width: 110px;
 	text-align: center;
 }
 
